<resources>
    <string name="app_name">KrasikovSurfEducation</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="text_button_login">ВОЙТИ</string>
    <string name="password_validate_text">Пароль должен содержать 6 символов</string>
    <string name="login_error_text">Вы ввели не верные данные.\nПопробуйте еще раз</string>
    <string name="nothing">nothing</string>
    <string name="mem_list_title">Популярные мемы</string>
    <string name="bad_connection_error">Отсутсвует интернет-соединение\nПопробуйте позже</string>
    <string name="text_fail_ferst_connection">Не удалось загрузить ленту\\nОбновите экран или попробуйте позже</string>
    <string name="btn_create">СОЗДАТЬ</string>
    <string name="title_hint">Заголовок</string>
    <string name="title_dialog">Выбрать фото</string>
    <string name="from_gallery">Из галереи</string>
    <string name="take_photo">Сделать фото</string>
    <string name="title_text">Текст</string>
    <string name="text_about">О приложении</string>
    <string name="text_logout">Выйти</string>
    <string name="title_logout_dialog">Действительно хотите выйти?</string>
    <string name="logout_cancel">ОТМЕНА</string>
    <string name="logout_yes">ВЫЙТИ</string>
    <string name="text_share">Поделится</string>

    <plurals name="daysGone">
        <item quantity="zero">Сегодня</item>
        <item quantity="one">%d день назад</item>
        <item quantity="few">%d дня назад</item>
        <item quantity="many">%d дней назад</item>
    </plurals>
</resources>
